--- a/Content/Style/style.css
+++ b/Content/Style/style.css
@@ -1,19 +1,33 @@
-body, html, #container {
+html, body, #container {
     height: 100%;
     width:100%;
 }
 
 #GameArea {
     height: 40%;
-    width: 90%;
+    width: 95%;
     float:left;
     border: 2px solid black;
+
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all .8s ease;
+    -moz-transition: all .8s ease;
+    -ms-transition: all .8s ease;
+    -o-transition: all .8s ease;
+    transition: all .8s ease;
 }
 
 #ConsoleArea {
     height: 40%;
-    width:90%;
+    width:95%;
     float:left;
+
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all .8s ease;
+    -moz-transition: all .8s ease;
+    -ms-transition: all .8s ease;
+    -o-transition: all .8s ease;
+    transition: all .8s ease;
 }
 
 .ConsolePane {
@@ -24,46 +38,33 @@ body, html, #container {
 }
 
 
-.SidePanel {
-    width:10%;
+#SidePanel {
+    width:2%;
     height:100%;
     float:left;
+    background-color: lightgray;
 
-    -webkit-animation: fadeInLeft 4s;
-    animation: fadeInLeft 4s;
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all .8s ease;
+    -moz-transition: all .8s ease;
+    -ms-transition: all .8s ease;
+    -o-transition: all .8s ease;
+    transition: all .8s ease;
+
+}
+
+#SidePanel:hover {
+    width:10%;
+}
+
+#SidePanel:hover + #GameArea  {
+    width:85%;
+}
+
+#SidePanel:hover ~ #ConsoleArea {
+    width: 85%;
 }
 
 
-@-webkit-keyframes fadeInLeft {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
 
-    100% {
-        opacity: 1;
-        -webkit-transform: none;
-        transform: none;
-    }
-}
-
-@keyframes fadeInLeft {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-
-    100% {
-        opacity: 1;
-        -webkit-transform: none;
-        transform: none;
-    }
-}
-
-.fadeInLeft {
-    -webkit-animation-name: fadeInLeft;
-    animation-name: fadeInLeft;
-}
 
